--- a/12am_coder/education.css
+++ b/12am_coder/education.css
@@ -8,7 +8,7 @@ body
 }
 #top   {
     width:100%;
-    background-color:#000000;
+    background-color:black;
     height:44px;
     margin:0px;
         }
